# ci-dj

./: .gitignore  AGENTS.md  CLAUDE.md  PROMPT.md  README.md  justfile
aggregator/: package-lock.json  package.json  tsconfig.json
aggregator/src/: index.ts
aggregator/src/control/: transport.test.ts  transport.ts
aggregator/src/identity/: provider.test.ts  provider.ts
aggregator/src/rooms/: rooms.test.ts  rooms.ts
aggregator/src/signals/: blend.test.ts  blend.ts  clusters.test.ts  clusters.ts  embed.test.ts  embed.ts  label.ts  messages.ts  moderation.ts  opinion-matrix.test.ts  opinion-matrix.ts  pipeline.test.ts  pipeline.ts  prompts.test.ts  prompts.ts  room-state.test.ts  room-state.ts  sampling.test.ts  sampling.ts  taste.test.ts  taste.ts  temperature.test.ts  temperature.ts  vibes.ts
aggregator/src/ws/: server.test.ts  server.ts
backend/: pyproject.toml
backend/magenta_dj/: controller.py  cue.py  engine.py  sa3.py  worker.py
backend/magenta_dj/static/: index.html  player-worklet.js
backend/scripts/: repro_reconnect_echo.py  spike_beat_corpus.py  spike_generate.py  spike_style_transfer.py  verify_m1.py
backend/slipmate/: collective.py  controller.py  engine.py  sa3.py  sidecar.py  worker.py
backend/tests/: test_controller.py  test_cue.py  test_engine.py  test_sa3.py  test_sidecar.py  test_worker.py
crowd-web/: index.html  main.css  main.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
crowd-web/src/: connection.ts  main.ts  now.ts  onboarding.ts  room.ts  storage.ts  strings.ts  styles.css  types.ts  vibes.ts
docs/: ROADMAP.md  ddj-400-hardware-checklist.md  m12-hardware-checklist.md  m13-hardware-checklist.md  m14-hardware-checklist.md  m15-hardware-checklist.md  m16-hardware-checklist.md  m18-checklist.md  m20-hardware-checklist.md  m21-hardware-checklist.md  m23-hardware-checklist.md  m9-m10-hardware-checklist.md  midi-ddj-400.md  midi-ddj-flx4.md  native-migration-hardware-checklist.md  native-migration-plan.md  native-packaging.md  spike-beat-detection.md  spike-c-midi.md  spike-mrt2.md  spike-rust-audio.md
docs/adr/: 0002-browser-app-with-python-model-workers.md  0003-frontend-audio-mixing-via-web-audio.md  0004-style-is-a-weighted-prompt-blend-tempo-is-not-a-parameter.md  0005-hardware-control-via-web-midi-in-the-frontend.md  0006-cue-output-via-a-second-audio-sink.md  0007-flx4-phones-jack-via-a-backend-cue-sink.md  0008-color-fx-as-one-knob-curves-at-a-pre-fader-insert.md  0009-freeze-pads-loop-played-audio-at-the-channel-head.md  0010-beat-detection-on-the-output-behind-an-honesty-gate.md  0011-deck-to-deck-style-sampling-via-audio-embeddings.md  0012-generated-pads-via-a-spawned-sa3-mlx-subprocess.md  0014-beat-matching-via-varispeed-tracks-against-the-measured-stream.md  0016-beat-loops-length-scaling-over-the-loop-region.md  0020-rust-interface-state-store-and-mcp-server.md  README.md
docs/collective/: PLAN.md  README.md  cloudflare-tunnel.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: crusher-kernel.js  loop-capture-kernel.js  player-worklet.js
frontend/scripts/: shot_m24.mjs  spike_cue_routing.mjs  verify_m18.mjs  verify_m19.mjs  verify_m2.mjs  verify_m20.mjs  verify_m23.mjs  verify_m3.mjs  verify_m5.mjs  verify_m6.mjs
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  persistence.test.ts  persistence.ts  presets.test.ts  presets.ts  ramWarning.test.ts  ramWarning.ts  shortcuts.test.ts  shortcuts.ts
frontend/src/audio/: AudioEngineProvider.tsx  bands.test.ts  bands.ts  beat.test.ts  beat.ts  beatCorpus.test.js  beatgrid.test.ts  beatgrid.ts  crusherKernel.test.js  cueStream.test.ts  cueStream.ts  engine.test.ts  engine.ts  engineContext.ts  eq.test.ts  eq.ts  fx.test.ts  fx.ts  fxGraphs.ts  levels.test.ts  levels.ts  loopCaptureKernel.test.js  loops.test.ts  loops.ts  master.ts  nativeEngine.test.ts  nativeEngine.ts  outputs.test.ts  outputs.ts  styleSample.test.ts  styleSample.ts  track.test.ts  track.ts  types.ts  wav.test.ts  wav.ts
frontend/src/collective/: InfluencePanel.tsx  bridge.test.ts  bridge.ts  flag.ts  influence.test.ts  influence.ts  useBridge.ts
frontend/src/control/: MidiControls.test.tsx  MidiControls.tsx  appIntents.test.ts  appIntents.ts  bus.ts  ddj400.test.ts  ddj400.ts  driver.ts  flx4.test.ts  flx4.ts  midi.test.ts  midi.ts  registry.ts  useMidi.test.tsx  useMidi.ts
frontend/src/crates/: CrateBrowser.test.tsx  CrateBrowser.tsx
frontend/src/deck/: Deck.tsx  DeckColumn.test.tsx  DeckColumn.tsx  DeckPanel.test.tsx  DeckPanel.tsx  deck.css  deckState.test.ts  deckState.ts  nativeDeck.test.ts  nativeDeck.ts  nativeDeckPcm.test.ts  nativeDeckPcm.ts  useDeck.test.ts  useDeck.test.tsx  useDeck.ts
frontend/src/i18n/: en.json
frontend/src/media/: MediaExplorer.test.tsx  MediaExplorer.tsx  media.css  songTitle.test.ts  songTitle.ts
frontend/src/mixer/: BeatView.test.tsx  BeatView.tsx  Mixer.test.tsx  Mixer.tsx  MixerStrip.test.tsx  MixerStrip.tsx  mixer.css
frontend/src/test/: clickTrack.ts  setup.ts
frontend/src/ui/: AccentPicker.tsx  BeatViewPicker.tsx  Button.tsx  Knob.test.tsx  Knob.tsx  Logo.tsx  OutputDevicePicker.test.tsx  OutputDevicePicker.tsx  PhaseMeter.tsx  Select.tsx  Slider.tsx  TextField.tsx  TrackOverview.tsx  ZoomStrip.tsx  fonts.css  tokens.css  ui.css
host-screen/: index.html  main.css  main.js  package.json
scripts/: freeze-sidecar.sh
spike/rust-audio/engine/: Cargo.toml
src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/engine/: Cargo.toml
src-tauri/engine/src/: device.rs  fx.rs  graph.rs  host.rs  lib.rs  loops.rs  playback.rs  ring.rs  telemetry.rs
src-tauri/src/: commands.rs  generation.rs  lib.rs  main.rs  sidecar.rs  songs.rs
