[project]
name = "magenta-dj-backend"
version = "0.1.0"
description = "magenta-dj backend: MRT2 deck workers behind a FastAPI WebSocket controller"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "magenta-rt[mlx]>=2.0.2",
    "sounddevice>=0.5.5",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
magenta-dj = "magenta_dj.controller:main"

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8",
    "ruff>=0.8",
    "websockets>=14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["magenta_dj"]
